kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-portfolio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: react-portfolio
  template:
    metadata:
      labels:
        app: react-portfolio
    spec:
      containers:
        - name: react-portfolio-container
          image: manarmagdi96/my-portfolio:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
