kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: react-portfolio-service
spec:
  type: NodePort
  selector:
    app: react-portfolio
  ports:
    - protocol: TCP 
    - port: 80  
      targetPort: 80
