kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: cluster-issuer-letsencrypt-prod
  name: portfolio-ingress
spec:
  ingressClassName: external-nginx
  rules:
  - host: manar.axolotlite.com
    http:
      paths:
      - backend:
          service:
            name: react-portfolio-service
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - manar.axolotlite.com
    secretName: manar-tls-axolotlite
